--- a/composer.json
+++ b/composer.json
@@ -22,10 +22,10 @@
     ],
     "homepage": "https://github.com/eAvio/project-board",
     "require": {
-        "php": "^8.1|^8.2|^8.3",
-        "illuminate/support": "^10.0|^11.0|^12.0",
-        "laravel/nova": "^5.0",
-        "spatie/laravel-medialibrary": "^10.15|^11.0|^12.0"
+        "php": "^8.0|^8.1|^8.2|^8.3",
+        "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
+        "laravel/nova": "^4.0",
+        "spatie/laravel-medialibrary": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0"
